-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 200601) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.1 *-

??062001 (v2.0.2)  -** stable release **-
 	- added: current position tracking to loop devices
	- added: more verbose xrun info from ALSA 0.9.x devices
	- changed: improved configure checks for python include 
		   and library directories
	- changed: -tl now works without -t
	- fixed: selecting a non-existant chainsetup could crash 
		 ecasound
	- fixed: --enable-audiofile actually disabled the use of 
		 libaudiofile (!)
05062001 (v2.0.1)  -** stable release **-
	- added: ecasoundrc - default-to-internal-buffering; select
		 the default between -z:intbuf and -z:nointbuf
	- added: alternative C ECI implementation providing reentrant
		 access to the library; the new routines have a '_r' 
		 postfix and are located in libecasoundc [ajeanneau]
	- changed: completely rewritten mp3 header parsing; should 
		   fix most of the compatibility problems
	- fixed: disk buffers weren't properly flushed in -z:db mode 
		 when changing or setting processing position
	- fixed: bugs in assigning LADSPA plugin audio ports to 
	  	 ecasound chain channels
	- fixed: configure script failed if arts was installed 
	  	 without the devel files (arts-devel) 
	- fixed: bug in the MIDI-server code caused core dumps in
		 certain situations