@@ -179,6 +179,7 @@ Kai Vehmanen -	mailto:kaiv@wakkanet.fi
 
 Davis, Paul - Has probably written more Linux audio related code (and mails) than anyone else! :)
 Beaupre, Antoine - Patches for FreeBSD compatibility. [beaupran]
+Bowman, Brad - Bug hunting. [bowman]
 Campbell, Ross - Tips concerning Solaris. [rcampbel]
 Coker, Rob - Pulse gate (-eemp) code. [rcs]
 Darilek, Nolan - Ogg vorbis fixes. [nolan_d]
